# midas

./: .gitlab-ci.yml  .hgeol  .hgignore  CMakeLists.txt  bot.py  cfr.py  hyperbot.sln  kuhn.py  simplebots.py  test.py  todo.txt  train.py
ai/: CMakeLists.txt  abstraction.cpp  abstraction.h  ai.vcxproj  cfr_solver.h  common.h  evaluator.cpp  evaluator.h  game.h  holdem_abstraction.h  holdem_game.cpp  holdem_game.h  holdem_state.cpp  holdem_state.h  kuhn_abstraction.cpp  kuhn_evaluator.cpp  kuhn_game.cpp  kuhn_game.h  kuhn_state.cpp  kuhn_state.h  main.cpp
cfr/: CMakeLists.txt  card.h  cfr_solver.cpp  cfr_solver.h  choose.h  compare_and_swap.h  gui.cpp  gui_main.cpp  holdem_abstraction.cpp  holdem_abstraction.h  holdem_evaluator.cpp  holdem_evaluator.h  holdem_flop_lut.cpp  holdem_flop_lut.h  holdem_game.cpp  holdem_game.h  holdem_loops.h  holdem_preflop_lut.cpp  holdem_preflop_lut.h  holdem_river_lut.cpp  holdem_river_lut.h  holdem_state.cpp  holdem_state.h  holdem_turn_lut.cpp  holdem_turn_lut.h  k_means.h  kuhn_abstraction.cpp  kuhn_abstraction.h  kuhn_evaluator.h  kuhn_game.cpp  kuhn_game.h  kuhn_state.cpp  kuhn_state.h  lut.cpp  main.cpp  nl_holdem_state.cpp  nl_holdem_state.h  twoplustwo_evaluator.cpp
pybot/: actors.py  main.py
pybot/conf/: poker.10-20-limit.xml  poker.levels-blinds.xml  pokerrake.py
src/: CMakeLists.txt
src/abs/: CMakeLists.txt  main.cpp
src/abslib/: CMakeLists.txt  holdem_abstraction.cpp  holdem_abstraction.h  holdem_abstraction_base.h  holdem_abstraction_v2.cpp  holdem_abstraction_v2.h  kuhn_abstraction.cpp  kuhn_abstraction.h  leduc_abstraction.cpp  leduc_abstraction.h  py.cpp
src/cfr/: CMakeLists.txt  main.cpp
src/cfrlib/: CMakeLists.txt  cfr_solver.cpp  cfr_solver.h  cfr_solver.ipp  cs_cfr_solver.h  cs_cfr_solver.ipp  flhe_state.cpp  flhe_state.h  game_state_base.cpp  game_state_base.h  holdem_abstraction.cpp  holdem_abstraction.h  holdem_game.cpp  holdem_game.h  holdem_game.ipp  holdem_state.cpp  holdem_state.h  kuhn_abstraction.cpp  kuhn_abstraction.h  kuhn_game.cpp  kuhn_game.h  kuhn_state.cpp  kuhn_state.h  leduc_game.cpp  leduc_game.h  leduc_state.cpp  leduc_state.h  nl_holdem_state.cpp  nl_holdem_state.h  nl_holdem_state.ipp  nlhe_state.cpp  nlhe_state.h  nlhe_state.ipp  nlhe_state_base.cpp  nlhe_state_base.h  nlhe_state_v2.h  nlhe_state_v2.ipp  nlhe_strategy.cpp  nlhe_strategy.h  pcs_cfr_solver.h  (+7 more)
src/cli/: .flake8  .pylintrc  CMakeLists.txt  main.py  pylintrc
src/cli/ext/: pyDes.py  rfb.py
src/cli/midas/: ai.py  app.py  io.py  netclick.py  settings.py  util.py
src/cli/test/: test_ai.py  test_util.py
src/cli/test/settings/: partypoker.xml  wpn.xml
src/evallib/: CMakeLists.txt  holdem_evaluator.cpp  holdem_evaluator.h  leduc_evaluator.cpp  leduc_evaluator.h  ranks.dat.REMOVED.git-id  twoplustwo_evaluator.cpp  twoplustwo_evaluator.h
src/gamelib/: CMakeLists.txt  flhe_state.cpp  flhe_state.h  game_state_base.cpp  holdem_dealer.cpp  holdem_dealer.h  holdem_game.cpp  holdem_game.h  holdem_game.ipp  holdem_state.h  kuhn_dealer.cpp  kuhn_dealer.h  kuhn_game.cpp  kuhn_game.h  kuhn_state.cpp  kuhn_state.h  leduc_dealer.cpp  leduc_dealer.h  leduc_game.cpp  leduc_game.h  leduc_state.cpp  leduc_state.h  nlhe_state.cpp  nlhe_state.h  nlhe_state_base.cpp  nlhe_state_base.h  py.cpp
src/gui/: CMakeLists.txt  captcha_manager.cpp  captcha_manager.h  fake_window.cpp  fake_window.h  gui.cpp  gui.h  gui.qrc  holdem_strategy_widget.cpp  holdem_strategy_widget.h  input_manager.cpp  input_manager.h  lobby_888.cpp  lobby_888.h  lobby_base.h  lobby_manager.cpp  lobby_manager.h  main.cpp  main_window.cpp  main_window.h  qt_log_sink.cpp  qt_log_sink.h  settings_dialog.cpp  settings_dialog.h  site_888.cpp  site_888.h  site_base.cpp  site_base.h  site_settings.cpp  site_settings.h  site_stars.cpp  site_stars.h  smtp.cpp  smtp.h  state_widget.cpp  state_widget.h  strategy_dialog.cpp  strategy_dialog.h  table_manager.cpp  table_manager.h  (+6 more)
src/lut/: CMakeLists.txt  main.cpp
src/lutlib/: CMakeLists.txt  hand_indexer.cpp  hand_indexer.h  holdem_flop_lut.cpp  holdem_flop_lut.dat.REMOVED.git-id  holdem_flop_lut.h  holdem_preflop_lut.cpp  holdem_preflop_lut.h  holdem_river_lut.cpp  holdem_river_lut.dat.REMOVED.git-id  holdem_river_lut.h  holdem_river_ochs_lut.cpp  holdem_river_ochs_lut.h  holdem_turn_lut.cpp  holdem_turn_lut.dat.REMOVED.git-id  holdem_turn_lut.h
src/play/: CMakeLists.txt  actor_base.h  always_call_actor.cpp  always_call_actor.h  always_fold_actor.cpp  always_fold_actor.h  always_raise_actor.cpp  always_raise_actor.h  main.cpp  nlhe_actor.cpp  nlhe_actor.h  nlhe_game.cpp  nlhe_game.h
src/purify/: CMakeLists.txt  main.cpp
src/sitegen/: CMakeLists.txt  image_widget.cpp  image_widget.h  main_window.cpp  main_window.h  sitegen.qrc
src/util/: CMakeLists.txt  binary_io.cpp  binary_io.h  card.h  choose.h  game.h  k_means.h  metric.h  partial_shuffle.h  py.cpp  random.h  sort.h  version.cmake  version.cpp.in  version.h
test/: CMakeLists.txt  binary_io_test.cpp  config.cpp.in  config.h  holdem_evaluator.cpp  holdem_evaluator_test.cpp  holdem_river_lut_test.cpp  holdem_river_ochs_lut_test.cpp  nlhe_state_test.cpp  nlhe_state_v2_unittests.cpp  pure_cfr_solver_test.cpp  sort_test.cpp
